@@ -1,5 +1,7 @@
 5 April 2012: Wouter
 	- fix bug #443: --with-chroot-dir not honoured by configure.
+	- fix bug #444: setusercontext was called too late (thanks Bjorn
+	  Ketelaars).
 
 27 March 2012: Wouter
 	- fix bug #442: Fix that Makefile depends on pythonmod headers
